--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
 
 <form id="image-previewer" enctype=multipart/form-data method=post action=/delete>
   <img id="preview-image" />
-  <label for="img_url" style="display: none;"></label>
-  <input type="text" name="img_url" id="img_url_name" disabled style="display: none;">
-  <input type="button" value= "Delete" class="btn btn-danger btn-sm delet-button"/>
-</form>
+  <label for="img_url_name" style="display: none;"></label>
+  <input type="text" name="img_url_name" id="img_url_name" value="initial">
+  <input type="submit" value= "Delete" class="btn btn-danger btn-sm delet-button" id="delete-button"/>
+</form> 
 
  
 <div class="upload-section">
