--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <div class="upload-class">
     <h1 style="display: inline-block;">Upload Image </h1><h6 style="display: inline-block;">(Public)</h6> 
     <form method=post enctype=multipart/form-data action=/upload class="input-group">
-        <input type="file" name="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" multiple="multiple">
+        <input type="file" name="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" multiple="multiple" required>
         <input class="btn btn-outline-secondary" type="submit" value="Upload" id="inputGroupFileAddon04">
     </form>
   </div>
