--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
         <form method="post"  action="/login" >
             <h3 class="alert-light text-center p-2 border rounded my-auto">Login User</h3>
             <div class="form-group m-4">
-                <label for="username">Email :</label>
+                <label for="username">User name :</label>
                 <input type="text" class="form-control form-control-sm" name="username" id="username" placeholder="username">
                 <span id="alert-box-validation" style="color: rgba(255, 0, 0, 0.981);font-size: 10px;"></span>
             </div>
