--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <!-- header -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-md">
-      <a class="navbar-brand" href="/">Photo Galary</a>
+      <a class="navbar-brand" href="/">Photo Gallery</a>
       {% if not session.username %}
       <a class="navbar-brand" href="/loginPage">Login</a>
       <a class="navbar-brand" href="/signupPage">Sign UP</a>
